tests/ui/type-alias/unresolved-assoc-ty-suggest-trait.lazy.stderr
error[E0220]: associated type `Assoc` not found for `T`
  --> $DIR/unresolved-assoc-ty-suggest-trait.rs:11:22
   |
LL | type AssocOf<T> = T::Assoc;
   |                      ^^^^^ there is an associated type `Assoc` in the trait `Trait`
   |
help: consider restricting type parameter `T`
   |
LL | type AssocOf<T: Trait> = T::Assoc;
   |               +++++++

error[E0220]: associated type `Assok` not found for `T`
  --> $DIR/unresolved-assoc-ty-suggest-trait.rs:15:22
   |
LL | type AssokOf<T> = T::Assok;
   |                      ^^^^^ there is a similarly named associated type `Assoc` in the trait `Trait`
   |
help: consider restricting type parameter `T`
   |
LL | type AssokOf<T: Trait> = T::Assok;
   |               +++++++
help: ...and changing the associated type name
   |
LL | type AssokOf<T> = T::Assoc;
   |                      ~~~~~

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0220`.
